Migrate Cypher shell to junit 5